<resources>
    <string name="app_name">HashPass</string>
    <string name="new_to_hashlock_register">New To HashLock? Register</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="label_or">OR</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="login">Login</string>
    <string name="send_email">Submit</string>
    <string name="forget_password_lebal">Forget \nPassword?</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="choose_category">Select Category</string>
    <string name="url">Url</string>
    <string name="refresh_password">Refresh Password</string>
    <string name="copy_password">Copy Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="home">Home</string>
    <string name="create_password">Create Password</string>
    <string name="setting">Setting</string>
    <string name="add_password">Add Password</string>
    <string name="password_length">Password Length</string>
    <string name="digits_e_g_234">Digits (e.g. 234)</string>
    <string name="letter_e_g_aa">Letter (e.g. Aa)</string>
    <string name="symbol_e_g">Symbol (e.g. @#$%)</string>
    <string name="password_created">Password Created</string>
    <string name="lower_letter_label">Lower Letter (a-z)</string>
    <string name="upper_letter_label">Upper Letter (A-Z)</string>
    <string name="title">Title</string>
    <string name="user_id">User ID</string>
    <string name="description">Description</string>
    <string name="security_question">Security Question</string>
    <string name="security_answer">Security Answer</string>
    <string name="remarks">Remarks</string>
    <string name="user_name">User Name</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy</string>
    <string name="about">About Us</string>
    <string name="hasura">About Hasura</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forget_npassword">Forget \nPassword</string>
    <string name="enter_your_account_email_to_receive_reset_password_email">Enter your account email to receive reset password email</string>
    <string name="create_naccount">Create \nAccount</string>
    <string name="login_to_nhashpass">Login to \nHashPass</string>
    <string name="try_again">Try Again</string>
    <string name="some_error_occurs_ntry_again">Some Error Occurs.\nTry Again</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="password_strength_strong">Strong</string>
    <string name="default_password_length">8</string>
    <string name="share">Share</string>
    <string name="edit_password">Edit Password</string>
    <string name="fingerprint_lock">Fingerprint Lock</string>
    <string name="delete">Delete</string>
    <string name="launch_website">Launch Site</string>
</resources>