<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/nav_home">


    <fragment
        android:id="@+id/nav_add_password"
        android:name="com.rohitjakhar.hashpass.presention.add_password.AddPasswordFragment"
        android:label="@string/add_password"
        tools:layout="@layout/fragment_add_password">
        <argument
            android:name="passwordDetails"
            android:defaultValue="@null"
            app:argType="com.rohitjakhar.hashpass.data.model.PasswordModel"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_generate_password"
        android:name="com.rohitjakhar.hashpass.presention.generate_password.GeneratePasswordFragment"
        android:label="@string/create_password"
        tools:layout="@layout/fragment_generate_password" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.rohitjakhar.hashpass.presention.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_nav_setting_to_editProfileFragment"
            app:destination="@id/editProfileFragment"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_out_left"
            app:popEnterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/fui_slide_out_left"
            />
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.rohitjakhar.hashpass.presention.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_passwordDetailsFragment"
            app:destination="@id/passwordDetailsFragment"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_out_left"
            app:popEnterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/fui_slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/passwordDetailsFragment"
        android:name="com.rohitjakhar.hashpass.presention.password_details.PasswordDetailsFragment"
        android:label="@string/password"
        tools:layout="@layout/fragment_password_details">
        <argument
            android:name="passwordDetails"
            app:argType="com.rohitjakhar.hashpass.data.model.PasswordModel" />
        <action
            android:id="@+id/action_passwordDetailsFragment_to_nav_add_password"
            app:destination="@id/nav_add_password"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_out_left"
            app:popEnterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/fui_slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.rohitjakhar.hashpass.presention.edit_profile.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>