<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_nav"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.rohitjakhar.hashpass.presention.login.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginFragment_to_forgetPasswordFragment"
            app:destination="@id/forgetPasswordFragment"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_out_left"
            app:popEnterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/fui_slide_out_left" />
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_out_left"
            app:popEnterAnim="@anim/fui_slide_in_right"
            app:popExitAnim="@anim/fui_slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.rohitjakhar.hashpass.presention.signup.SignUpFragment"
        android:label="@string/sign_up" />
    <fragment
        android:id="@+id/forgetPasswordFragment"
        android:name="com.rohitjakhar.hashpass.presention.forget_password.ForgetPasswordFragment"
        android:label="@string/forget_password"
        tools:layout="@layout/fragment_forget_password" />
</navigation>